testing another fix for tarot card width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,7 @@ video {
 }
 
 .photo-grid-tarot img {
-  max-width:min(100%, 400px);
+  max-width:100%;
   max-height:95vh;
 }
 
